[package]
name = "cmark"
version = "0.1.0"
edition = "2024"

[lib]

[features]
rsx = ["dep:cmark_rsx"]
flow = []
frontmatter = []

[dependencies]
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_warn"] }
common = { path = "../common" }
cmark_rsx = { path = "../cmark_rsx", optional = true }

[dev-dependencies]
env_logger = "0.11.8"
